--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ NUTRITIONIX_APP_ID=9aa66479
 NUTRITIONIX_APP_KEY=afad45045b517635d1128ec311f19a08
 
 # Optional (if using full JSON-based credentials instead of env-based)
-GOOGLE_APPLICATION_CREDENTIALS=./config/google-credentials.json
+GOOGLE_APPLICATION_CREDENTIALS=/workspace/config/google-credentials.json
